opam-version: "2.0"
maintainer: "Markus Mottl <markus.mottl@gmail.com>"
authors: [
  "Markus Mottl <markus.mottl@gmail.com>"
  "Christian Szegedy <csdontspam@metamatix.com>"
]
license: "Expat"
homepage: "http://mmottl.github.io/sqlite3-ocaml"
doc: "https://mmottl.github.io/sqlite3-ocaml/api"
dev-repo: "git+https://github.com/mmottl/sqlite3-ocaml.git"
bug-reports: "https://github.com/mmottl/sqlite3-ocaml/issues"
tags: [ "clib:sqlite3" "clib:pthread"  ]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "1.11.0"}
  "base" {build}
  "stdio" {build}
  "conf-sqlite3" {build}
]

synopsis: "SQLite3 bindings for OCaml"

description: """
sqlite3-ocaml is an OCaml library with bindings to the SQLite3 client API.
Sqlite3 is a self-contained, serverless, zero-configuration, transactional SQL
database engine with outstanding performance for many use cases."""
