(library
  (public_name sqlite3)
  (foreign_stubs
    (language c)
    (names sqlite3_stubs)
    (flags (:standard) (:include c_flags.sexp) -O2 -fPIC -DPIC))
  (c_library_flags (:include c_library_flags.sexp) -lpthread)
)

(rule
  (targets c_flags.sexp c_library_flags.sexp)
  (deps (:discover config/discover.exe))
  (action (run %{discover}))
)
